layout bug fix

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -140,6 +140,7 @@ img {
 
 .showcase-content h1 {
   font-size: 6rem;
+  margin-top: 20rem;
 }
 
 .showcase-content p {
@@ -437,6 +438,7 @@ img {
 
   .showcase-content h1 {
     font-size: 6rem;
+    margin-top: 7rem;
   }
 
   .showcase-content p {
@@ -531,13 +533,14 @@ img {
 
 @media (max-width: 768px) {
   .showcase-content h1 {
-    font-size: 5.5rem;
+    font-size: 4rem;
   }
 }
 
 @media (max-width: 709px) {
   .showcase-content h1 {
-    font-size: 5rem;
+    font-size: 4rem;
+    margin-top: 6rem;
   }
   .showcase-content p {
     font-size: 3rem;
@@ -632,7 +635,8 @@ form {
   .inputs {
     input {
       width: 30rem;
-      padding: 1rem;
+      padding: 1.5rem;
+      font-size: 1.5rem;
     }
 
     button {
@@ -687,4 +691,5 @@ form {
 .btn-contact {
   padding: 1.2rem;
   font-size: 1.5rem;
+  height: 5.7rem;
 }
